Nya saker tillagda

--- a/ToDoApp/Index.html
+++ b/ToDoApp/Index.html
@@ -6,6 +6,7 @@
     <title>ToDoApp</title>
 </head>
 <body>
+    <button id="add-todo-button">Lägg till todo</button>
    <script src="script.js"></script> 
 </body>
 </html>
